[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MessageLevel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "Coin Dash!"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 29.0
margin_top = 21.0
margin_right = 89.0
margin_bottom = 61.0
rect_scale = Vector2( 2, 1 )
text = "0"

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -103.0
margin_top = 23.0
margin_right = -63.0
margin_bottom = 46.0
rect_scale = Vector2( 2, 1 )
text = "0"
align = 2
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.0
margin_top = -166.0
margin_right = 106.0
margin_bottom = -70.0
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
