[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.580392, 0.745098, 0.384314, 0.54902 )

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0.356863 )

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 500, 400 )
custom_styles/panel = SubResource( 5 )

[node name="score_panel" type="Panel" parent="Control"]
modulate = Color( 1, 1, 1, 0.231373 )
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 120 )
custom_styles/panel = SubResource( 6 )

[node name="timer_panel" type="Panel" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -161.0
margin_right = -1.0
margin_bottom = 120.0
custom_styles/panel = SubResource( 7 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -103.0
margin_right = 336.0
margin_bottom = -3.0
rect_min_size = Vector2( 400, 100 )
custom_fonts/font = SubResource( 1 )
text = "JELLY  DASH"

[node name="Time" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_top = 20.0
margin_right = -60.0
margin_bottom = 116.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="Score" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 116.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -166.0
margin_top = 50.0
margin_right = 166.0
margin_bottom = 152.0
rect_min_size = Vector2( 300, 80 )
custom_fonts/font = SubResource( 4 )
text = "START"
flat = true
